--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,139 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hello World</title>
+  <title>Accom</title>
 </head>
 <body>
+
+  <header class="header">
+    <div class="header__inner content">
+      <nav class="header__site-nav">
+        <button class="site-nav__menu-snap snap">
+          <svg class="site-nav__menu-svg" width="39" height="20">
+            <use href="#menu" />
+          </svg>
+        </button>
+        <section class="site-nav__inner">
+          <header class="site-nav__header">
+            <svg class="site-nav__logo" width="167" height="43">
+              <use href="#logo" />
+            </svg>
+            <button class="site-nav__close-snap snap">
+              <svg class="site-nav__close-svg" width="16" height="16">
+                <use href="#close" />
+              </svg>
+            </button>
+          </header>
+          <ul class="site-nav__list list">
+            <li class="site-nav__item site-nav__item--active">
+              <a href="#" class="site-nav__link">Что возим</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Куда возим</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Избавим от головной боли</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Услуга "под ключ"</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Отзывы</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Узнать стоимость</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Проекты</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Компания</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Как работаем</a>
+            </li>
+
+            <li class="site-nav__item">
+              <a href="#" class="site-nav__link">Бонусная программа</a>
+            </li>
+          </ul>
+
+          <button class="akcent-button">Рассчитать стоимость</button>
+          <a href="#" class="site-nav__transport-link link">ПЕРЕВОЗЧИКАМ</a>
+        </section>
+      </nav>
+
+      <div class="header__mail">
+        <div class="mail__wrapper-svg">
+          <svg class="mail__svg" width="14" height="14">
+            <use href="#mail" />
+          </svg>
+          <a href="#" class="mail__link link">hi@accom.com</a>
+        </div>
+      </div>
+
+      <ul class="header__social-list list">
+        <li class="social-list__item">
+          <a href="#" class="social-list__link">
+            <svg class="social-list__svg" width="19" height="19">
+              <use href="#whatsapp" />
+            </svg>
+          </a>
+        </li>
+
+        <li class="social-list__item">
+          <a href="#" class="social-list__link">
+            <svg class="social-list__svg" width="19" height="19">
+              <use href="#viber" />
+            </svg>
+          </a>
+        </li>
+
+        <li class="social-list__item">
+          <a href="#" class="social-list__link">
+            <svg class="social-list__svg" width="19" height="19">
+              <use href="#telegram" />
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <svg class="header__logo-svg">
+        <use href="#logo" />
+      </svg>
+
+      <div class="header__phone">
+        <div class="phone__svg-wrapper">
+          <svg class="phone__svg" width="11" height="11">
+            <use href="#phone" />
+          </svg>
+        </div>
+
+        <a href="tel:+78003604577" class="phone__call-link">
+          <span class="call-link__wrapper">
+            <span class="phone__prefix">+7 (800)</span> 360-45-77
+          </span>
+          <span class="phone__recall-link link">Перезвоним за 8 сек.</span>
+        </a>
+      </div>
+
+      <button class="header__order-btn akcent-button">
+        Оставить заявку
+        <svg class="order-btn__svg" width="6" height="6">
+          <use href="#select" />
+        </svg>
+      </button>
+
+    </div>
+  </header>
 
 </body>
 </html>
