--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
           <svg class="mail__svg" width="14" height="14">
             <use href="#mail" />
           </svg>
-          <a href="#" class="mail__link link">hi@accom.com</a>
         </div>
+        <a href="#" class="mail__link link">hi@accom.com</a>
       </div>
 
       <ul class="header__social-list list">
@@ -129,13 +129,63 @@
       </div>
 
       <button class="header__order-btn akcent-button">
-        Оставить заявку
-        <svg class="order-btn__svg" width="6" height="6">
-          <use href="#select" />
-        </svg>
+       <span class="akcent-button__front">
+          Оставить заявку
+          <svg class="order-btn__svg" width="6" height="6">
+            <use href="#select" />
+          </svg>
+       </span>
       </button>
 
     </div>
+
+    <section class="header__slogan content">
+      <strong class="slogan__credo">
+        ДОСТАВИМ С 
+        <span class="slogan__heart">
+          <svg class="slogan__heart-svg" width="14" height="12">
+            <use href="#heart" />
+          </svg>
+          ЛЮБОВЬЮ
+        </span>
+        ВАШ ГРУЗ В ЛЮБУЮ ТОЧКУ МИРА 
+        <span class="slogan__infinity-sign">
+          ОТ 40 КГ ДО 	
+          &nbsp;
+          <svg width="25" height="25" >
+            <use href="#infinity" />
+          </svg>
+        </span>
+      </strong>
+
+      <p class="slogan__info">
+        <b class="slogan__bold">В самые сжатые сроки с финансовой гарантией,</b> избавим от головной боли с таможней, сертификацией, страховкой, с ACCOM вы всегда в выйграше
+      </p>
+
+      <div class="slogan__score">
+
+        <div class="score__button-wrapper">
+          <button class="score__akcent-button akcent-button">
+            <span class="akcent-button__front">
+              Рассчитать стоимость
+            </span>
+          </button>
+  
+          <a href="#" class="score__link link">
+            20-40% скидка на тестовый заказ
+            <svg class="score__svg" width="13" height="13">
+              <use href="#quest" />
+            </svg>
+          </a>
+        </div>
+
+        <p class="score__info">
+          Проложим оптимальный маршрут, подберем транспорт, рассчитаем точную стоимость и срок <b class="score__bold">за 10 минут</b>
+        </p>
+
+      </div>
+
+    </section>
   </header>
 
 </body>
