--- a/src/index.html
+++ b/src/index.html
@@ -17,60 +17,67 @@
           </svg>
         </button>
         <section class="site-nav__inner">
-          <header class="site-nav__header">
-            <svg class="site-nav__logo" width="167" height="43">
-              <use href="#logo" />
-            </svg>
-            <button class="site-nav__close-snap snap">
-              <svg class="site-nav__close-svg" width="16" height="16">
-                <use href="#close" />
+          <div class="site-nav__content">
+            <header class="site-nav__header">
+              <svg class="site-nav__logo" width="167" height="43">
+                <use href="#logo" />
               </svg>
+              <button class="site-nav__close-snap snap">
+                <svg class="site-nav__close-svg" width="16" height="16">
+                  <use href="#close" />
+                </svg>
+              </button>
+            </header>
+            
+            <ul class="site-nav__list list">
+              <li class="site-nav__item site-nav__item--active">
+                <a href="#" class="site-nav__link">Что возим</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Куда возим</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Избавим от головной боли</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Услуга "под ключ"</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Отзывы</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Узнать стоимость</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Проекты</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Компания</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Как работаем</a>
+              </li>
+  
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Бонусная программа</a>
+              </li>
+            </ul>
+  
+            <button class="akcent-button">
+              <span class="akcent-button__front">
+                Рассчитать стоимость
+              </span>
             </button>
-          </header>
-          <ul class="site-nav__list list">
-            <li class="site-nav__item site-nav__item--active">
-              <a href="#" class="site-nav__link">Что возим</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Куда возим</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Избавим от головной боли</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Услуга "под ключ"</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Отзывы</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Узнать стоимость</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Проекты</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Компания</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Как работаем</a>
-            </li>
-
-            <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Бонусная программа</a>
-            </li>
-          </ul>
-
-          <button class="akcent-button">Рассчитать стоимость</button>
-          <a href="#" class="site-nav__transport-link link">ПЕРЕВОЗЧИКАМ</a>
+            <a href="#" class="site-nav__transport-link link">ПЕРЕВОЗЧИКАМ</a>
+          </div>
         </section>
       </nav>
 
@@ -159,7 +166,7 @@
       </strong>
 
       <p class="slogan__info">
-        <b class="slogan__bold">В самые сжатые сроки с финансовой гарантией,</b> избавим от головной боли с таможней, сертификацией, страховкой, с ACCOM вы всегда в выйграше
+        <b class="slogan__bold">В самые сжатые сроки с финансовой гарантией,</b> избавим от головной боли с таможней, сертификацией, страховкой, с ACCOM вы всегда в выигрыше
       </p>
 
       <div class="slogan__score">
